bk_ida/gccida/g1/mem_loc_descriptor
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8199:48: error: must use 'enum' tag to refer to type 'machine_mode'
dw_loc_descr_ref  mem_loc_descriptor( rtx rtl, machine_mode mode) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8209:4: error: expected ';' after expression
rtx pool_constant_mark; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8209:5: error: use of undeclared identifier 'pool_constant_mark'; did you mean 'get_pool_constant_mark'?
rtx pool_constant_mark; // rax 
    ^~~~~~~~~~~~~~~~~~
    get_pool_constant_mark
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/rtl.h:1306:12: note: 'get_pool_constant_mark' declared here
extern rtx get_pool_constant_mark       PARAMS ((rtx, bool *));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8247:1: error: use of undeclared identifier 'pool_constant_mark'
pool_constant_mark = get_pool_constant_mark( rtx, marked); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8248:17: error: use of undeclared identifier 'pool_constant_mark'
if ( *( _WORD *)pool_constant_mark != 68 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8250:7: error: use of undeclared identifier 'pool_constant_mark'; did you mean 'get_pool_constant_mark'?
rtx = pool_constant_mark; 
      ^~~~~~~~~~~~~~~~~~
      get_pool_constant_mark
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/rtl.h:1306:12: note: 'get_pool_constant_mark' declared here
extern rtx get_pool_constant_mark       PARAMS ((rtx, bool *));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8251:21: error: use of undeclared identifier 'pool_constant_mark'
if ( ( *( ( _BYTE *)pool_constant_mark + 3) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8253:25: error: use of undeclared identifier 'pool_constant_mark'; did you mean 'get_pool_constant_mark'?
get_pool_constant_mark( pool_constant_mark, marked); 
                        ^~~~~~~~~~~~~~~~~~
                        get_pool_constant_mark
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/rtl.h:1306:12: note: 'get_pool_constant_mark' declared here
extern rtx get_pool_constant_mark       PARAMS ((rtx, bool *));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8289:45: error: use of undeclared identifier 'machine_mode'
v4 = mem_loc_descriptor( rtx->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2)); 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8309:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v36.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8312:36: error: expected expression
return mem_loc_descriptor( *( rtx *)( v36.rtwint + 8), mode); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8318:35: error: expected expression
v29 = mem_loc_descriptor( *( rtx *)&rtx[1], mode); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8352:40: error: invalid suffix 'xmode' on integer constant
rtx = gen_rtx_fmt_ee( PLUS, *(short *)0xmode, rtx->fld[0].rtx, v21); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8355:13: error: expected ';' after expression
rtx = ( rtx)rtx[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8360:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( v23 = ( __int64)rtx[1], *( _WORD *)v23 == 54) ) 
                     ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8370:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = (  struct rtx_def *)rtx[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/dwarf2out.c:8418:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7904, "mem_loc_descriptor"); 
                             ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mem_loc_descriptor/src/obj/dwarf2out.o] Error 1
